--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,16 @@
 h1 {
-    color: rgb(118, 32, 121);
+    color: #762079;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-align: center;
     font-size: 70px;
+}
+
+
+h2 {
+    color: #062846;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-align: center;
+    font-size: 50px;
 }
