--- a/styles.css
+++ b/styles.css
@@ -23,3 +23,16 @@ h2 {
     background-color: black;
     
 }
+
+.joinNL {
+    font-weight: bold;
+}
+
+.workButton {
+    color: white;
+    background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    padding: 10px;
+    border-radius: 15%;
+}
