--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+
+
 h1 {
     color: #300331;
     font-family: Arial, Helvetica, sans-serif;
@@ -15,24 +17,66 @@ h2 {
     font-size: 50px;
 }
 
-.newsletter {
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
+
+h3, h4, .joinNL {
+    color: #222222;
+}
+
+.mainContent {
+    width: 800px;
+    margin: 0 auto;
     text-align: center;
-    background-color: black;
-    
 }
 
-.joinNL {
-    font-weight: bold;
+li {
+    list-style-type: none;
+    border-style: solid;
+    border-color: white;
 }
 
-.workButton {
+.connect-button {
     color: white;
-    background-color: black;
+    background-color: #300331;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
-    padding: 10px;
-    border-radius: 15%;
+    font-size: 20px;
+    padding: 15px;
+    border-radius: 10px;
+    width: 25%;
+    border-style: solid;
+    border-color: white;
 }
+
+.join-newsletter {
+    font-weight: bold;
+    margin-top: 30px;
+}
+
+.email-input {
+   width: 34%;
+   height: 30px;
+   text-align: center;
+   border-radius: 10px;
+   border-style: solid;
+}
+
+.newsletter-button {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 15px;
+    text-align: center;
+    margin: 15px;
+    padding: 10px;
+    width: 30%;
+    background-color: #051424;
+    border-style: solid;
+    border-color: white;
+    border-radius: 10px;
+}
+
+
+
+
+
+
