--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,42 @@
-
+body {
+    background-image: url("https://images.unsplash.com/photo-1529528744093-6f8abeee511d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 h1 {
     color: #300331;
-    font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     text-align: center;
-    font-size: 70px;
-    margin-bottom: 25px;
+    font-size: 60px;
+    /* margin-bottom: 25px;
+    text-decoration: underline; */
+    font-family: 'Rubik Mono One', sans-serif;
+    text-shadow: 10px 5px #f5f5f5;
+    margin-bottom: 0;
+}
+
+h2, h3, h4 {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
 h2 {
     color: #051424;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
+    font-weight: 900;
     text-align: center;
-    font-size: 30px;
+    font-size: 35px;
+    margin-bottom: 50px;
 }
 
 h3,h4 {
-    font-size: 20px;
-}
-
-
-h3, h4, .joinNL {
+    font-size: 25px;
     color: #222222;
     text-align: center;
 }
+
 
 .mainContent {
     width: 800px;
@@ -34,19 +44,24 @@ h3, h4, .joinNL {
     text-align: center;
 }
 
-ul {
-    padding: 0;;
-}
 
 li {
     list-style-type: none;
-    border-style: solid;
-    border-color: white;
 }
+
 
 .fun-facts {
     border-style: dashed double none ;
-    margin-top: 60px;
+    padding-top: 10px;
+}
+
+
+.fun-facts-list {
+    padding-left: 0;
+}
+
+li {
+    font-size: 20px;
 }
 
 
@@ -58,20 +73,27 @@ li {
 
 .discover-work-list {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
+    padding-left: 0;
+    margin-bottom: 30px;
 }
 
+
 .connect-button {
-    color: white;
+    color: #f5f5f5;
     background-color: #300331;
-    font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     font-size: 20px;
     padding: 15px;
     border-radius: 10px;
     width: 100%;
-    border-style: solid;
-    border-color: white;
+    border: none;
+}
+
+.connect-button:hover {
+    background-color:#f5f5f5;
+    color: #300331;
+    cursor: grab;
 }
 
 .join-newsletter {
@@ -88,8 +110,7 @@ li {
 }
 
 .newsletter-button {
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
+    color: whitesmoke;
     font-weight: bold;
     font-size: 15px;
     text-align: center;
@@ -97,9 +118,14 @@ li {
     padding: 10px;
     width: 30%;
     background-color: #222222;
-    border-style: solid;
-    border-color: white;
+    border: none;
     border-radius: 10px;
+}
+
+.newsletter-button:hover {
+    background-color: whitesmoke;
+    color: #222222;
+    cursor: grab;
 }
 
 
